style: adding links

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
   </html>
   <body>
     <header class="header--principal">
-      <div class="logo logo--header"><img src="../assets/images/logo--header.svg"></div>
+      <div class="logo logo--header"><a href="index.html"><img src="../assets/images/logo--header.svg"></a></div>
       <nav class="nav--header">
         <ul>
           <li><a href="#">Playstation</a></li>
@@ -23,9 +23,9 @@
           <li><a href="#">PC</a></li>
           <li><a href="#">Mobile</a></li>
         </ul>
-      </nav><a class="header__busqueda" href="#"><i class="fas fa-search"></i><span>Search</span></a>
+      </nav><a class="header__busqueda" href="search.html"><i class="fas fa-search"></i><span>Search</span></a>
     </header>
-    <main class="contenedor--home"><a class="caja--con-fondo caja--grande">
+    <main class="contenedor--home"><a class="caja--con-fondo caja--grande" href="articulo.html">
           <div class="caja__imagen"><img src="../assets/images/cyberpunk-2077.jpg"></div>
           <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">Destacadas</span>
             <h2>Cyberpunk 2077 tiene tres prólogos distintos</h2>
@@ -37,7 +37,7 @@
                 <li><i class="fas fa-eye"></i><span>275</span></li>
                 <li><i class="fas fa-comment-alt"></i><span>12</span></li>
               </ul>
-            </div></a><a class="caja--con-fondo caja--pequena caja-rdr2">
+            </div></a><a class="caja--con-fondo caja--pequena caja-rdr2" href="articulo.html">
           <div class="caja__imagen"><img src="../assets/images/rdr2.jpg"></div>
           <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">PS4</span>
             <h2>Red Dead Redemption 2 llegará a PC</h2>
@@ -51,8 +51,8 @@
             </div></a>
       <div class="banner--homepage">
         <h3>Apex Legends Temporada 2: un nuevo trailer muestra cambios al mapa.</h3>
-        <p>Dos nuevos trailers de Apex Legends muestran lo que nos espera en la Temporada 2 del battle royale de Respawn.</p><a class="button">Leer mas</a>
-      </div><a class="caja--con-fondo caja--pequena caja-ff">
+        <p>Dos nuevos trailers de Apex Legends muestran lo que nos espera en la Temporada 2 del battle royale de Respawn.</p><a class="button" href="articulo.html">Leer mas</a>
+      </div><a class="caja--con-fondo caja--pequena caja-ff" href="articulo.html">
           <div class="caja__imagen"><img src="../assets/images/ff.jpg"></div>
           <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">PS4</span>
             <h2>Final Fantasy XIV recibirá una serie live-action en televisión</h2>
@@ -63,7 +63,7 @@
                 <li><i class="fas fa-eye"></i><span>275</span></li>
                 <li><i class="fas fa-comment-alt"></i><span>12</span></li>
               </ul>
-            </div></a><a class="caja--con-fondo caja--pequena caja-xbox">
+            </div></a><a class="caja--con-fondo caja--pequena caja-xbox" href="articulo.html">
           <div class="caja__imagen"><img src="../assets/images/xbox.jpg"></div>
           <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">XBOX</span>
             <h2>Conoce las actualizaciones de XBOX Game Pass</h2>
@@ -74,7 +74,7 @@
                 <li><i class="fas fa-eye"></i><span>275</span></li>
                 <li><i class="fas fa-comment-alt"></i><span>12</span></li>
               </ul>
-            </div></a><a class="caja--con-fondo caja--pequena caja-fortnite">
+            </div></a><a class="caja--con-fondo caja--pequena caja-fortnite" href="articulo.html">
           <div class="caja__imagen"><img src="../assets/images/fortnite.jpg"></div>
           <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">FORTNITE</span>
             <h2>Fortnite une fuerzas con Stranger Things</h2>
@@ -85,7 +85,7 @@
                 <li><i class="fas fa-eye"></i><span>275</span></li>
                 <li><i class="fas fa-comment-alt"></i><span>12</span></li>
               </ul>
-            </div></a><a class="caja--con-fondo caja--mediana caja-zelda">
+            </div></a><a class="caja--con-fondo caja--mediana caja-zelda" href="articulo.html">
           <div class="caja__imagen"><img src="../assets/images/zelda.jpg"></div>
           <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">Switch</span>
             <h2>Secuela de The Legend of Zelda: Breath of the Wild anunciada en el E3 2019</h2>
