--- a/html/perfil.html
+++ b/html/perfil.html
@@ -14,7 +14,7 @@
   </html>
   <body>
     <header class="header--principal">
-      <div class="logo logo--header"><img src="../assets/images/logo--header.svg"></div>
+      <div class="logo logo--header"><a href="index.html"><img src="../assets/images/logo--header.svg"></a></div>
       <nav class="nav--header">
         <ul>
           <li><a href="#">Playstation</a></li>
@@ -23,7 +23,7 @@
           <li><a href="#">PC</a></li>
           <li><a href="#">Mobile</a></li>
         </ul>
-      </nav><a class="header__busqueda" href="#"><i class="fas fa-search"></i><span>Search</span></a>
+      </nav><a class="header__busqueda" href="search.html"><i class="fas fa-search"></i><span>Search</span></a>
     </header>
     <main>
       <section class="perfil"><img class="perfil__avatar" src="../assets/images/avatar.jpg">
