--- a/html/articulo.html
+++ b/html/articulo.html
@@ -14,7 +14,7 @@
   </html>
   <body>
     <header class="header--principal">
-      <div class="logo logo--header"><img src="../assets/images/logo--header.svg"></div>
+      <div class="logo logo--header"><a href="index.html"><img src="../assets/images/logo--header.svg"></a></div>
       <nav class="nav--header">
         <ul>
           <li><a href="#">Playstation</a></li>
@@ -23,14 +23,14 @@
           <li><a href="#">PC</a></li>
           <li><a href="#">Mobile</a></li>
         </ul>
-      </nav><a class="header__busqueda" href="#"><i class="fas fa-search"></i><span>Search</span></a>
+      </nav><a class="header__busqueda" href="search.html"><i class="fas fa-search"></i><span>Search</span></a>
     </header>
     <section class="intro">
       <div class="intro__imagen"><img src="../assets/images/intro.jpg"></div>
       <div class="intro__contenido"><span class="intro__categoria">Noticias</span>
         <h1 class="intro__titulo">Cyberpunk 2077 tiene tres prólogos distintos</h1>
       </div>
-      <div class="intro__autor"><img src="../assets/images/avatar.jpg"><span class="intro__autor-titulo">Autor</span><span class="intro__autor-nombre">John Wick</span></div>
+      <div class="intro__autor"><a href="perfil.html"><img src="../assets/images/avatar.jpg"></a><span class="intro__autor-titulo">Autor</span><span class="intro__autor-nombre">John Wick</span></div>
     </section>
     <article class="articulo--principal">
       <p class="articulo--principal__intro">En Cyberpunk 2077 los jugadores podrán seleccionar entre tres historias de origen diferentes, cada una presentando una ubicación de partida distinta para su personaje.</p>
@@ -46,21 +46,21 @@
           <div class="caja__imagen"><img src="../assets/images/xbox.jpg"></div>
           <div class="caja__contenido"><span class="caja__categoria">Xbox</span>
             <h3>Conoce las actualizaciones de Game Pass</h3>
-            <p>A una semana terminado el E3, Microsoft anunció la 1era rotación de juegos para Xbox</p><a>Leer Mas</a>
+            <p>A una semana terminado el E3, Microsoft anunció la 1era rotación de juegos para Xbox</p><a href="articulo.html">Leer Mas		</a>
           </div>
         </div>
         <div class="caja">
           <div class="caja__imagen"><img src="../assets/images/fortnite.jpg"></div>
           <div class="caja__contenido"><span class="caja__categoria">Fortnite</span>
             <h3>Fortnite une fuerzas con Stranger Things</h3>
-            <p>Portales hacia el Upside Down han aparecido dentro de Fortnite, y aunque no funcionan igual.</p><a>Leer Mas</a>
+            <p>Portales hacia el Upside Down han aparecido dentro de Fortnite, y aunque no funcionan igual.</p><a href="articulo.html">Leer Mas		</a>
           </div>
         </div>
         <div class="caja">
           <div class="caja__imagen"><img src="../assets/images/cuphead.jpg"></div>
           <div class="caja__contenido"><span class="caja__categoria">Cuphead</span>
             <h3>Cuphead se atrasa hasta el año 2020</h3>
-            <p>Los miembros de Studio MDHR revelan la razón detrás del atraso de la fecha de lanzamiento.</p><a>Leer Mas</a>
+            <p>Los miembros de Studio MDHR revelan la razón detrás del atraso de la fecha de lanzamiento.</p><a href="articulo.html">Leer Mas		</a>
           </div>
         </div>
     </section>
