--- a/html/search.html
+++ b/html/search.html
@@ -14,7 +14,7 @@
   </html>
   <body>
     <header class="header--principal">
-      <div class="logo logo--header"><img src="../assets/images/logo--header.svg"></div>
+      <div class="logo logo--header"><a href="index.html"><img src="../assets/images/logo--header.svg"></a></div>
       <nav class="nav--header">
         <ul>
           <li><a href="#">Playstation</a></li>
@@ -23,7 +23,7 @@
           <li><a href="#">PC</a></li>
           <li><a href="#">Mobile</a></li>
         </ul>
-      </nav><a class="header__busqueda" href="#"><i class="fas fa-search"></i><span>Search</span></a>
+      </nav><a class="header__busqueda" href="search.html"><i class="fas fa-search"></i><span>Search</span></a>
     </header>
     <div class="buscador">
       <form>
@@ -35,7 +35,7 @@
       <div class="filtros"><span>Filtrar Por</span><a class="fa fa-th-large" href="#"></a><a class="fa fa-bars" href="#"></a></div>
     </header>
     <section class="contenido">
-        <div class="caja"><a class="caja__imagen" href="#"><img src="../assets/images/apex.jpg"></a>
+        <div class="caja"><a class="caja__imagen" href="articulo.html"><img src="../assets/images/apex.jpg"></a>
           <div class="caja__contenido"><span class="caja__categoria">Video</span>
             <h3>Apex Legends Temporada 2: un nuevo trailer muestra cambios al mapa</h3>
             <p>Dos nuevos trailers de Apex Legends muestran lo que nos espera en la Temporada 2 del battle royale de Respawn.</p>
@@ -48,7 +48,7 @@
               </ul>
             </div>
         </div>
-        <div class="caja"><a class="caja__imagen" href="#"><img src="../assets/images/crash.jpg"></a>
+        <div class="caja"><a class="caja__imagen" href="articulo.html"><img src="../assets/images/crash.jpg"></a>
           <div class="caja__contenido"><span class="caja__categoria">Video</span>
             <h3>Ya salio la reseña de Crash Team Racing Nitro Fueled</h3>
             <p>Veinte años después del lanzamiento del original, Crash Team Racing ha recibido un remake total que logra mantener todos los aspectos originales.</p>
@@ -61,7 +61,7 @@
               </ul>
             </div>
         </div>
-        <div class="caja"><a class="caja__imagen" href="#"><img src="../assets/images/ff.jpg"></a>
+        <div class="caja"><a class="caja__imagen" href="articulo.html"><img src="../assets/images/ff.jpg"></a>
           <div class="caja__contenido"><span class="caja__categoria">Video</span>
             <h3>Final Fantasy XIV recibirá una serie live-action en televisión </h3>
             <p>Final Fantasy XIV Online recibirá una adaptación aTV de parte de Square Enix con Sony Pictures Television y Hivemind.</p>
